<resources>
    <string name="app_name">Nutri</string>
    <!--  Tela de login   -->
    <string name="Texto_de_logo1">LOGIN</string>
    <string name="app_logo_description">Logo do aplicativo</string>
    <string name="Texto_de_login">Login:</string>
    <string name="Texto_de_senha">Senha:</string>
    <string name="Texto_de_botao_entrar">Login</string>
    <string name="Texto_de_botao_cadastrar">Cadastrar</string>
    <string name="Texto_de_botao_esqueci_senha">Esqueci a Senha</string>


    <!--  Tela de cadastro  -->
    <string name="Logo_cadastro">CADASTRO</string>
    <string name="name">Nome:</string>
    <string name="senha">Senha:</string>
    <string name="CPF">CPF:</string>
    <string name="Email">Email:</string>
    <string name="Botão_cadastrar">Cadastrar</string>
    <string name="radio1">Masculino</string>
    <string name="radio2">Feminino</string>
    <string name="date">DD/MM/YY:</string>
    <string name="telefone">Telefone:</string>
    <string name="CRM">CRM:</string>
    <!--  Teste -->

    <!--  Tela de apresentaçao e escolha de usuario/admin  -->
    <string name="user">Cliente</string>
    <string name="admin">Profissional</string>





    <string name="texto_1">Esqueci minha senha</string>
    <string name="para_sua_seguran">Para sua segurança enviaremos um código para validar sua redefinição.</string>
    <string name ="sub_digitar_email">Digite seu email :</string>
    <string name="button_email">Email</string>
    <string name="button_solicitar">Solicitar Código</string>

    <!--TELA 2 ESQUECI SENHA-->
    <string name="title_text">Digite o código\n de redefinição</string>
    <string name="hint_code">Código</string>
    <string name="button_text">Redefinir</string>

    <!--TELA 3 ESQUECI SENHA-->
    <string name="title_password_recovery">Recuperação de senha</string>
    <string name="hint_new_password">Digite a nova senha</string>
    <string name="hint_confirm_password">Digite novamente</string>
    <string name="btn_reset">Redefinir</string>

    <!--TELA CRONOGRAMA-CLIENTE-->

    <!-- Saudação e Títulos -->
    <string name="saudacao">Bem-vindo\nJoao Silva(a)!</string>
    <string name="texto_cronograma">Seu Cronograma</string>

    <!-- Dias da Semana -->
    <string name="dia_1">Segunda</string>
    <string name="dia_2">Terça</string>
    <string name="dia_3">Quarta</string>
    <string name="dia_4">Quinta</string>
    <string name="dia_5">Sexta</string>
    <string name="dia_6">Sábado</string>
    <string name="dia_7">Domingo</string>

    <!-- Botões principais -->
    <string name="alimentacao">Alimentação\n <small>5:00 - 8:00</small></string>
    <string name="atividade_fisica">Atividade física\n <small>8:30 - 10:00</small></string>
    <string name="hidratacao">Hidratação\n <small>10:00 - 10:10</small></string>
    <string name="intestino">Intestino\n <small>10:10 - 12:00</small></string>
    <string name="descanso">Descanso\n <small>12:00 - 15:00</small></string>

    <!--CRONOGRAMA-MONITORAMENTO-ALIMENTAÇÃO-->

    <string name="automonitoramento_titulo">Automonitoramento de Rotina</string>
    <string name="plano_alimentar">PLANO ALIMENTAR</string>
    <string name="instrucoes">Marque com ✅ as refeições que você seguiu o plano, com ❌ as refeições livres e com ✖ as refeições que pulou.</string>
    <string name="refeicoes">Refeições</string>
    <string name="domingo">DOM</string>
    <string name="segunda">SEG</string>
    <string name="terca">TER</string>
    <string name="quarta">QUA</string>
    <string name="quinta">QUI</string>
    <string name="sexta">SEX</string>
    <string name="sabado">SAB</string>
    <string name="cafe_da_manha">Café da Manhã</string>
    <string name="colacao">Colação</string>
    <string name="almoco">Almoço</string>
    <string name="lanche">Lanche</string>
    <string name="jantar">Jantar</string>
    <string name="ceia">Ceia</string>
    <string name="refeicao_livre">Refeição Livre</string>
    <string name="voltar">Voltar</string>
    <string name="seta_voltar">Seta para voltar</string>


    <!--RELATORIO-->
    <string name="descricao_botao_voltar">Botão para voltar à tela anterior</string>
    <string name="titulo_relatorio_semanal">RELATÓRIO SEMANAL</string>
    <string name="descricao_titulo_relatorio">Título da tela do relatório semanal</string>
    <string name="pergunta_1">De 0 a 10, qual a nota que você dá para sua adesão à dieta?</string>
    <string name="hint_pergunta_1">Digite a nota.</string>
    <string name="pergunta_2">Quantos dias você treinou nesta semana?</string>
    <string name="hint_pergunta_2">Digite a nota.</string>
    <string name="pergunta_3">Você realizou exercícios aeróbicos/cardio?</string>
    <string name="hint_pergunta_3">Digite a nota.</string>
    <string name="pergunta_4">Conseguiu concluir todos os treinos?</string>
    <string name="hint_pergunta_4">Digite a nota.</string>
    <string name="pergunta_5">Qual foi sua maior dificuldade nesta semana?</string>
    <string name="hint_pergunta_5">Digite a nota.</string>




    <!--MONITORAMENTO_HIDRATACAO-->
    <!--Barra lateral-->
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="recibos">Recibos de Pagamento</string>
    <string name="notificacoes">Notificações</string>
    <string name="mudar_senha">Mudar Senha</string>
    <string name="logout">Sair</string>

</resources>