<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82BDED"
    android:padding="16dp"
    tools:context=".YourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#B3E5FC"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saudacao"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/texto_cronograma"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_day1"
                        style="@style/DayButtonStyleSelected"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_1" />

                    <Button
                        android:id="@+id/btn_day2"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_2" />

                    <Button
                        android:id="@+id/btn_day3"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_3" />

                    <Button
                        android:id="@+id/btn_day4"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_4" />

                    <Button
                        android:id="@+id/btn_day5"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_5" />

                    <Button
                        android:id="@+id/btn_day6"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_6" />

                    <Button
                        android:id="@+id/btn_day7"
                        style="@style/DayButtonStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/dia_7" />
                </LinearLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Seção de Botões -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_food"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/alimentacao"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="17.44dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/atividadef"
                android:gravity="start|center_vertical"
                android:text="@string/atividade_fisica"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="17.44dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/hidratacao"
                android:gravity="start|center_vertical"
                android:text="@string/hidratacao"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="17.44dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/intestino"
                android:gravity="start|center_vertical"
                android:text="@string/intestino"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="17.44dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/descanso"
                android:gravity="start|center_vertical"
                android:text="@string/descanso"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="17.44dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
