<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82BDED">


    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/descricao_botao_voltar"
        android:src="@drawable/icons_voltar39"
        app:layout_constraintBottom_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:background="#0057A4"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/titulo_relatorio_semanal"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descricao_titulo_relatorio"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/sv_perguntas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_1"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pergunta_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pergunta_1"
                    android:autofillHints="autofill"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_2"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pergunta_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pergunta_2"
                    android:autofillHints="autofill"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_3"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pergunta_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pergunta_3"
                    android:autofillHints="autofill"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_4"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pergunta_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pergunta_4"
                    android:autofillHints="autofill"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_5"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pergunta_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pergunta_5"
                    android:autofillHints="autofill"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
