<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82BDED"
    tools:context=".MainActivity2">
    <!--  Teste -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="361dp"
        android:layout_height="806dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login2"
            android:layout_width="336dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="250dp"
            android:autofillHints="Login"
            android:background="@drawable/border_rounded"
            android:hint="@string/Texto_de_login"
            android:inputType="text"
            android:padding="@dimen/text_size_medium"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textColorLink="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/senha3"
            android:layout_width="336dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="Senha"
            android:background="@drawable/border_rounded"
            android:ems="10"
            android:hint="@string/Texto_de_senha"
            android:inputType="textPassword"
            android:padding="@dimen/text_size_medium"
            android:textColorHighlight="#000000"
            android:textColorHint="#090000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="175dp"
            android:layout_height="66dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/cores_botoes"
            android:onClick="checar_admin"
            android:text="@string/Texto_de_botao_entrar"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha" />

        <Button
            android:id="@+id/button4"
            android:layout_width="175dp"
            android:layout_height="66dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="-65dp"
            android:layout_marginBottom="148dp"
            android:backgroundTint="@color/cores_botoes"
            android:text="@string/Texto_de_botao_esqueci_senha"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="175dp"
            android:layout_height="66dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="-130dp"
            android:backgroundTint="@color/cores_botoes"
            android:onClick="cadastro_admin"
            android:text="@string/Texto_de_botao_cadastrar"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="270dp"
            android:layout_height="86dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="-549dp"
            android:layout_marginBottom="0dp"
            android:text="@string/Texto_de_logo1"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>